fix contrast

--- a/styles/small.css
+++ b/styles/small.css
@@ -165,7 +165,7 @@ section img {
 .course-card {
   padding: 0.6rem 1rem;
   background-color: var(--blush);
-  color: var(--mauve);
+  color: var(--wine);
   border-radius: 4px;
 }
 
